Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.3.2, Qt Creator 3.4.0-rc1
-
None
-
Windows 7 64 bit
Qt 5.3.2, 5.4.1
Description
- Create a project and configure it with a couple of kits.
- Go to Projects mode.
- You'll see a lot of tabs, one for each kit, but none of these might be active:
- Click the arrow button right of the tabs a couple of times.
The active kit moves into view:
When switching to Projects mode, the active kit should always become visible.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-14182 Kit tabs disappear when Creator is too narrow
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-14174 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
109211,6 | Project Mode: Ensure that the target selector shows the active kit | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |