Project Mode: Ensure that the target selector shows the active kit

Change-Id: Ieeface07ed4f754e93f9738888165aefd0b94d0c
Task-number: QTCREATORBUG-14174
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>